5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4155/executions/1638_651.log
== TEST (2019-04-11 13:20:51) 
-- CODE:
a = float(input("altrura:"))
s = input("sexo:")

if(s.upper() == M)
	msg = (72.6 * a) - 58
else:
	msg = (62.1 * a) - 44.7
	
print(msg)
-- ERROR:
File "XXXX", line 4
    if(s.upper() == M)
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 13:20:54) 
-- CODE:
a = float(input("altrura:"))
s = input("sexo:")

if(s.upper() == M)
	msg = (72.6 * a) - 58
else:
	msg = (62.1 * a) - 44.7
	
print(msg)
-- ERROR:
File "XXXX", line 4
    if(s.upper() == M)
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 13:21:10) 
-- CODE:
a = float(input("altrura:"))
s = input("sexo:").upper()

if(s == M)
	msg = (72.6 * a) - 58
else:
	msg = (62.1 * a) - 44.7
	
print(msg)
-- ERROR:
File "XXXX", line 4
    if(s == M)
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 13:21:19) 
-- CODE:
a = float(input("altrura:"))
s = input("sexo:").upper()

if(s == M):
	msg = (72.6 * a) - 58
else:
	msg = (62.1 * a) - 44.7
	
print(msg)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if(s == M):
NameError: name 'M' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 13:21:39) 
-- CODE:
a = float(input("altrura:"))
s = input("sexo:").upper()

if(M):
	msg = (72.6 * a) - 58
else:
	msg = (62.1 * a) - 44.7
	
print(msg)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if(M):
NameError: name 'M' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 13:24:01) 
-- CODE:
a = float(input("altrura:"))
s = input("sexo:").upper()
M = "s"
if(s == M):
	msg = (72.6 * a) - 58
else:
	msg = (62.1 * a) - 44.7
	
print(msg)
-- OUTPUT:
17.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 13:24:38) 
-- CODE:
a = float(input("altrura:"))
s = input("sexo:").upper()
M = "s"
if(s == M):
	msg = (72.6 * a) - 58
else:
	msg = (62.1 * a) - 44.7
	
print(msg)
-- OUTPUT:
17.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 13:25:38) 
-- CODE:
a = float(input("altrura:"))
s = input("sexo:").upper()
M = "s"
if(s == M):
	msg = (72.6 * a) - 58
else:
	msg = (62.1 * a) - 44.7
	
print(msg)
-- OUTPUT:
17.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 13:25:59) 
-- CODE:
a = float(input("altrura:"))
s = input("sexo:").upper()
M = "s"
if(s == "M"):
	msg = (72.6 * a) - 58
else:
	msg = (62.1 * a) - 44.7
	
print(msg)
-- OUTPUT:
17.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 13:26:25) 
-- CODE:
a = float(input("altrura:"))
s = input("sexo:").upper()
M = "s"
if(s == "M"):
	msg = (72.7 * a) - 58
else:
	msg = (62.1 * a) - 44.7
	
print(msg)
-- OUTPUT:
17.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 13:27:11) 
-- CODE:
a = float(input("altura:"))
s = input("sexo:").upper()
M = "s"
if(s == "M"):
	msg = (72.7 * a) - 58
else:
	msg = (62.1 * a) - 44.7
	
print(msg)
-- OUTPUT:
17.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 13:28:12) 
-- CODE:
a = float(input("altura:"))
s = input("sexo:").upper()
M = "s"
if("s == "M"):
	msg = (72.7 * a) - 58
else:
	msg = (62.1 * a) - 44.7
	
print(msg)
-- ERROR:
File "XXXX", line 4
    if("s == "M"):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 13:28:19) 
-- CODE:
a = float(input("altura:"))
s = input("sexo:").upper()
M = "s"
if("s" == "M"):
	msg = (72.7 * a) - 58
else:
	msg = (62.1 * a) - 44.7
	
print(msg)
-- OUTPUT:
17.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 13:28:42) 
-- CODE:
a = float(input("altura:"))
s = input("sexo:").upper()
M = "s"
if(s == "M"):
	msg = (72.7 * a) - 58
else:
	msg = (62.1 * a) - 44.7
	
print(msg)
-- OUTPUT:
17.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 13:29:00) 
-- CODE:
a = float(input("altura:"))
s = input("sexo:").upper()
M = "s"
if(s == "M"):
	msg = (72.7 * a) - 58
else:
	msg = (62.1 * a) - 44.7
	
print(msg)
-- OUTPUT:
17.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 13:29:47) 
-- CODE:
a = float(input("altura:"))
s = input("sexo:").upper()
M = "s"
if(s == "M"):
	msg = (72.7 * a) - 58
else:
	msg = (62.1 * a) - 44.7
	
print(msg)
-- OUTPUT:
17.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 13:30:08) 
-- CODE:
a = float(input("altura:"))
s = input("sexo:").upper()
M = "s"
if(s == "M"):
	msg = (72.7 * a) - 58.0
else:
	msg = (62.1 * a) - 44.7
	
print(msg)
-- OUTPUT:
17.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 13:31:51) 
-- CODE:
a = float(input("altura:"))
s = input("sexo:")
M = "s"
if(s.upper() == "M"):
	msg = (72.7 * a) - 58.0
else:
	msg = (62.1 * a) - 44.7
	
print(msg)
-- OUTPUT:
17.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 13:32:07) 
-- CODE:
a = float(input("altura:"))
s = input("sexo:")
M = "s"
if(s.upper() == M):
	msg = (72.7 * a) - 58.0
else:
	msg = (62.1 * a) - 44.7
	
print(msg)
-- OUTPUT:
17.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 13:32:18) 
-- CODE:
a = float(input("altura:"))
s = input("sexo:")
M = "s"
if(s.upper() == M):
	msg = (72.7 * a) - 58.0
else:
	msg = (62.1 * a) - 44.7
	
print(msg)
-- OUTPUT:
17.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 13:32:37) 
-- CODE:
a = float(input("altura:"))
s = input("sexo:")
M = "s"
if(s.upper() == "M"):
	msg = (72.7 * a) - 58.0
else:
	msg = (62.1 * a) - 44.7
	
print(msg)
-- OUTPUT:
17.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 13:33:41) 
-- CODE:
a = float(input("altura:"))
s = input("sexo:")
M = "s"
if(s.upper() == "M"):
	msg = (72.7 * a) - 58.0
else:
	msg = (62.1 * a) - 44.7

r = round(msg, 2)

print(r)
-- OUTPUT:
17.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 13:33:50) 
-- CODE:
a = float(input("altura:"))
s = input("sexo:")
M = "s"
if(s.upper() == "M"):
	msg = (72.7 * a) - 58.0
else:
	msg = (62.1 * a) - 44.7

r = round(msg, 2)

print(r)
-- EXECUTION TIME:
0.146306
-- TEST CASE 1:
---- input:
1.0
F
---- correct output:
17.4
---- user output:
17.4
-- TEST CASE 2:
---- input:
1.234
M
---- correct output:
31.71
---- user output:
31.71
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
